--- a/style.css
+++ b/style.css
@@ -111,6 +111,8 @@ section {
   color: #444;
 }
 
+.map-iframe { width: 100%; height: 300px; border: none; border-radius: 10px; }
+
 .info-controls {
   display: flex;
   justify-content: center;
@@ -172,6 +174,7 @@ section {
     color: #fff;
   }
 
+
 /* 地圖 */
 #map-placeholder {
   height: 250px;
@@ -188,6 +191,7 @@ section {
   margin-bottom: 0.5rem;
   stroke: #555;
 }
+
 
 /* footer */
 footer {
