--- a/style.css
+++ b/style.css
@@ -95,7 +95,9 @@ section {
 
 /* 景點資訊 */
 #place-info img {
-  max-width: 100%;
+  height:256px;
+  width:342px;
+  /*max-width: 100%;*/
   border-radius: 8px;
   margin-bottom: 0.5rem;
 }
